--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- Info -->
-    <h2 id="info1">My name is Kamilbek, a genius, smart and wise guy :)</h2>
+    <h2 id="info1">Hello fren!, here's some facts about me )</h2>
 
     <!-- Hobbies -->
     <h2 class="section-title">My Hobbies</h2>
