--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <img src="film2.jpg" width="200" height="360">
         <img src="film3.jpg" width="200" height="360">
     </div>
+    <footer>
+        <p>My website is <strong>YourUsername.github.io</strong></p>
+    </footer>
 
 </body>
 </html>
