--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
         <img src="film2.jpg" width="200" height="360">
         <img src="film3.jpg" width="200" height="360">
     </div>
-    <footer>
-        <p>My website is <strong>YourUsername.github.io</strong></p>
+   <footer>
+    <p>
+        My website is  
+            <a href="https://YourUsername.github.io" target="_blank">
+                YourUsername.github.io
+            </a>
+        </p>
     </footer>
 
 </body>
