--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         <img src="film2.jpg" width="200" height="360">
         <img src="film3.jpg" width="200" height="360">
     </div>
+    <footer>
+    <p>
+        My website is  
+        <a href="https://YourUsername.github.io" target="_blank">
+            YourUsername.github.io
+        </a>
+    </p>
+    </footer>
+
 
 </body>
 </html>
