--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p>
         My website is  
         <a href="https://YourUsername.github.io" target="_blank">
-            YourUsername.github.io
+            bothttpppt1.github.io
         </a>
     </p>
     </footer>
