--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <footer>
     <p>
         My website is  
-        <a href="https://YourUsername.github.io" target="_blank">
+        <a href="https://bothttpppt1.github.io" target="_blank">
             bothttpppt1.github.io
         </a>
     </p>
