--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- Info -->
-    <h2 id="info1">Hello fren!, here's some facts about me )</h2>
+    <h2 id="info1">My name is Kamilbek, a genius, smart and wise guy :)</h2>
 
     <!-- Hobbies -->
     <h2 class="section-title">My Hobbies</h2>
@@ -43,14 +43,15 @@
         <img src="film2.jpg" width="200" height="360">
         <img src="film3.jpg" width="200" height="360">
     </div>
-   <footer>
+    <footer>
     <p>
         My website is  
-            <a href="https://YourUsername.github.io" target="_blank">
-                YourUsername.github.io
-            </a>
-        </p>
+        <a href="https://bothttpppt1.github.io" target="_blank">
+            bothttpppt1.github.io
+        </a>
+    </p>
     </footer>
+
 
 </body>
 </html>
